# Majorana

./: CMakeLists.txt  README.md  TODO.txt  alpha.mac  envsetup.sh  gui.cxx  gui.mac  photon.mac  reconstruct.cxx  simulate.cxx  vis.mac  vis2.mac
Argon/: Cf252.mac  alpha.mac  gui.mac  opticalphoton.mac  sipmGains.txt
README/: CONFIGURATION.md  RECONSTRUCTION.md  VISUALIZATION.md
config/: .LightSourceSteering.txt.swp  10atm  2atm  Cf252_10Events  Cf252_10atm_1000Events  Cf252_10atm_10x1000Events  Cf252_2atm_1000Events  Cf252_2atm_1000Events_02_27_2020  Cf252_2atm_10x1000Events_02_27_2020  Cf252_6atm_1000Events  Cf252_6atm_10x1000Events  Configuration.ini  Configuration.json  IntesityBigDisk  IntesityBigDiskCf252  IntesitySmallDisk  LightS_500000_Third.txt  LightS_50000_120_Second.txt  LightSourceSteering.txt  MotherLED10x50000P  MotherLED50000P  MotherLED50000_old  MotherLEDPeakTest  MotherReco.ini  MotherRecoLED.ini  MthShip_SimConfig_10atm.ini  MthShip_SimConfig_2atm.ini  MthShip_SimConfig_6atm.ini  MthShip_SimConfig_LED.ini  MthShip_SimConfiguration.ini  Nov_07_2019  Nov_21_2019  Nov_21_2019_LEDPeak  Nov_21_2019v2  Nov_21_2019x50  Nov_25_2019  RecoConfiguration.ini  SimConfiguration.ini  pixelization.txt  test  (+1 more)
evd/: SIM_EVD.py  SIPM_WHEEL_EVD.py  recoanatree.root
evd/cpb348_evd/: EventDisplay.C  Reconstructor.cxx  (+3 more)
include/: ActionInitialization.h  Analyzer.h  Configuration.h  DetectorConstruction.h  G4Helper.h  MaterialManager.h  OpBoundaryProcess.h  OpDetPhotonTable.h  OpticalPhysics.h  PhysicsList.h  Pixel.h  PixelTable.h  PrimaryGeneratorAction.h  Reconstructor.h  SteppingAction.h  Voxel.h  VoxelTable.h  Wheel.h
incmajreco/: Analyzer.h  Configuration.h  Reconstructor.h
minuit_reco/: RecoConfiguration.cfg  RecoHelper.py  RecoHelper.vectorized  combHists.py  output.root  reconstruct.py  reconstruct.txt  setup.py
output/: drawDetector.C  recoAnaTree.root  simulateOutput.root
production/: 02_19_thetaDepNoDisk.root  02_19_thetaDepNoDiskCorrection.root  02_19_thetaDepWithDiskCorrection.root  02_24_opReferenceTable.txt  1000_center.root  thetaDep60DegNoDisk.root  thetaDep60DegWithDisk.root
scripts/: makeClass.C  makeLightSteering1cm.C  makeLightSteeringLRF.C  makeLightSteeringTheta.C  makeSpline.py  rndPositionGen.C
src/: ActionInitialization.cxx  Analyzer.cxx  Configuration.cxx  DetectorConstruction.cxx  G4Helper.cxx  MPPCSD.cxx  MaterialManager.cxx  OpBoundaryProcess.cxx  OpDetPhotonTable.cxx  OpticalPhysics.cxx  PhysicsList.cxx  Pixel.cxx  PixelTable.cxx  PrimaryGeneratorAction.cxx  Reconstructor.cxx  SteppingAction.cxx  Voxel.cxx  VoxelTable.cxx  Wheel.cxx  WheelVolume.cxx
srcmajreco/: Analyzer.cxx  Configuration.cxx  Reconstructor.cxx
tests/: LightSourceSteering.txt  RecoConfiguration.ini  SimConfiguration.ini  pixelization5mm.txt  recotest.cxx  simtest.cxx  splinedOpRefTable5mm.txt
(+252 files in other folders)
